# cdx-brain

./: .gitignore  LICENSE  README.md  RELEASE-v0.4.0.md  RELEASE-v0.8.0.md  RELEASE-v0.9.0.md  RELEASE-v0.9.1.md  _patch_temp.txt  phase1_build.py  pyproject.toml  write_files.py
.github/workflows/: publish.yml
cc_star/: __init__.py  cli.py  config.py  installer.py  migrate.py  promote.py  promote_gate.py  provider.py
cc_star/cache/: policies.py  schema.py  skills.py  traces.py
cc_star/memos/: capture.py  feedback.py  pipeline.py  policy.py  retrieval.py  reward.py  skill.py  world_model.py
cc_star/ov/: session.py
cc_star/templates/: compact.py  inject.py  session_start.py  store.py  summary.py
cc_star/viewer/: __init__.py  server.py
cdx_brain/: __init__.py  cli.py  config.py  hot.py  hot_counter.py  installer.py  migrate.py  promote.py  promote_gate.py  provider.py
cdx_brain/cache/: decay.py  policies.py  schema.py  skills.py  traces.py
cdx_brain/counterfactual/: __init__.py  inject.py  log.py  store.py
cdx_brain/engine/: __init__.py  compactor.py  coordinator.py  embed_cache.py  hot_memory.py  module_manager.py  registry.py  tags.py  tracer.py  types.py
cdx_brain/entity/: __init__.py  graph.py  (+1 more)
docs/: codex-vs-cdxbrain-comparison.md  hot-md-integration-proposal.md  phase3-federation-proposal.md  phase4-community-upgrade-proposal.md  v0.9.0-full-release.md  v0.9.0-test-report.md  viewer-enhancement-plan.md  windows-install.md
tests/: test_cli.py  test_extractor.py  test_graph_diffusion.py  test_hot.py  test_installer.py  test_phase4_full.py
(+66 files in other folders)
