[build-system]
requires = ["hatchling",]
build-backend = "hatchling.build"

[project]
name = "cdx-brain"
version = "2.1.0"
description = "Codex class brain memory system --- HMS-infused retrieval engine + three-tier memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28","pyyaml>=6.0","numpy>=1.24","sqlite-vec>=0.1.0"]

[project.license]
text = "AGPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/jigeagent/cdx-brain"
Repository = "https://github.com/jigeagent/cdx-brain"

[project.scripts]
cdx-brain = "cdx_brain.cli:main"

[tool.hatch.build]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
